# gem

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_arch.sh  camera.cpp  camera.h  gl.cpp  gl.h  main.cpp  model.cpp  model.h  shader.cpp  shader.h  shape.h  sphere.txt  texture.cpp  texture.h  torus.txt  utils.cpp  utils.h  vertex.cpp  vertex.h
agpu/: CMakeLists.txt  agpu.cpp  agpu.h
apps/: CMakeLists.txt
apps/agpu_demo/: CMakeLists.txt  main.cpp
apps/assets_test/: CMakeLists.txt  main.cpp
apps/ecs_demo/: main.cpp
apps/editor/: CMakeLists.txt  editor_app.cpp  editor_app.h  editor_definitions.h  main.cpp
apps/gi_demo/: CMakeLists.txt  main.cpp
apps/gi_fixup/: CMakeLists.txt  main.cpp
apps/renderer_demo/: CMakeLists.txt  main.cpp
apps/sdl_gpu_test/: CMakeLists.txt  main.cpp
assets/models/tantive/: license.txt  scene.gltf
assets/shaders/: debug_3d_tex.frag.glsl  debug_3d_tex.shader  debug_3d_tex.vert.glsl  denoise.frag.glsl  denoise.shader  dir_light_shadow.frag.glsl  dir_light_shadow.vert.glsl  downsample.frag.glsl  downsample.shader  forward_lighting.shader  gbuffer.frag.glsl  gbuffer.shader  gbuffer.vert.glsl  gbuffer_floats.frag.glsl  gbuffer_textureless.shader  gbuffer_voxelization.comp.glsl  gbuffer_voxelization.shader  gi_combine.frag.glsl  gi_combine.shader  lighting.frag.glsl  lighting.shader  pbr.frag.glsl  pbr.shader  present.frag.glsl  present.shader  present.vert.glsl  ssr.frag.glsl  ssr.shader  taa.frag.glsl  texture.frag.glsl  texture.vert.glsl  visualize_3d_tex.shader  visualize_3d_tex.vert.glsl  visualize_3d_tex_instances.shader  visualize_voxel_tex.frag.glsl  visualize_voxel_tex.vert.glsl  voxel_blit.shader  voxel_clear.shader  voxel_cone_tracing.frag.glsl  voxel_cone_tracing.shader  (+3 more)
assets/shaders-hlsl/: blit.shader  gbuffer.shader
assets/shaders/im3d/: im3d.geom.glsl  im3d.lines.frag.glsl  im3d.lines.shader  im3d.lines.vert.glsl  im3d.points.frag.glsl  im3d.points.vert.glsl  im3d.tris.frag.glsl  im3d.tris.shader  im3d.tris.vert.glsl
assets/shaders2/: dir_light_shadow.shader  gbuffer.shader  lighting.shader  ssr.shader  taa.shader  texture.shader  visualize_3d_tex.shader  voxel_cone_tracing.shader  voxel_mips.shader
assets/shaders2/im3d/: im3d.points.shader
docs/sdlgpu/: plan.md
docs/tgl/: Calculating Diameter of Cone from Angle and Height.md  PSX Effect Overview.md
docs/tgl/.obsidian/: app.json  workspace.json
docs/tgl/Notes etc/: TAA.md  TODO 19.9.24.md
gem/: CMakeLists.txt
gem/include/gem/: AABB.h  aabb.h  alias.h  asset.h  asset_definitions.h  asset_hot_reload.h  asset_manager.h  backend.h  camera.h  dbg_assert.h  dbg_memory.h  debug.h  ecs_system.h  engine.h  events.h  framebuffer.h  fsm.h  funnelsans.ttf.h  gem.h  hash_string.h  im3d_gem.h  im3d_gl.h  input.h  json_type_interop.hpp  lights.h  macros.h  material.h  mesh.h  model.h  profile.h  project.h  renderer.h  scene.h  shader.h  shape.h  stb_image.h  texture.h  transform.h  utils.h  vertex.h  (+1 more)
gem/include/gem/gl/: gl_backend.h  gl_dbg.h  gl_framebuffer.h  gl_im3d.h  gl_mesh.h  gl_renderer.h  gl_shader.h  im3d_gl.h  renderer.h
gem/include/gem/gl/tech/: gbuffer.h  lighting.h  shadow.h  ssr.h  taa.h  tech_utils.h  vxgi.h
gem/include/gem/sdl/: framebuffer.h  gpu_helpers.h  gpu_state.h  texture.h  vertex.h  vertex_def.h
gem/include/gem/tech/: gbuffer.h  lighting.h  shadow.h  ssr.h  taa.h  tech_utils.h  vxgi.h
gem/src/: asset.cpp  asset_hot_reload.cpp  asset_manager.cpp  backend.cpp  camera.cpp  dbg_memory.cpp  engine.cpp  framebuffer.cpp  fsm.cpp  gbuffer.cpp  gem.cpp  im3d_gem.cpp  im3d_gl.cpp  input.cpp  lighting.cpp  material.cpp  mesh.cpp  model.cpp  open_gl_dbg.cpp  project.cpp  renderer.cpp  scene.cpp  shader.cpp  shadow.cpp  shape.cpp  ssr.cpp  taa.cpp  tech_utils.cpp  texture.cpp  transform.cpp  utils.cpp  vertex.cpp  voxelisation.cpp  vxgi.cpp
gem/src/gl/: gl_backend.cpp  gl_dbg.cpp  gl_framebuffer.cpp  gl_im3d.cpp  gl_renderer.cpp  gl_shader.cpp
gem/src/gl/tech/: gbuffer.cpp  lighting.cpp  shadow.cpp  ssr.cpp  taa.cpp  tech_utils.cpp  vxgi.cpp
gem/src/sdl/: framebuffer.cpp  gpu_helpers.cpp  gpu_state.cpp  texture.cpp
gle/: CMakeLists.txt  alias.h  asset.cpp  asset.h  asset_manager.cpp  asset_manager.h  backend.cpp  backend.h  camera.cpp  camera.h  dbg_memory.cpp  ecs_system.h  engine.cpp  engine.h  events.h  framebuffer.cpp  framebuffer.h  fsm.cpp  fsm.h  funnelsans.ttf.h  gl.cpp  gl.h  gle.h  hash_string.h  im3d_gl.cpp  im3d_gl.h  input.cpp  input.h  io.h  json_type_interop.hpp  lights.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  profile.h  project.cpp  project.h  (+19 more)
gle/tech/: gbuffer.cpp  gbuffer.h  lighting.cpp  lighting.h  shadow.cpp  shadow.h  ssr.cpp  ssr.h  taa.cpp  taa.h  tech_utils.cpp  tech_utils.h  utils.cpp  utils.h  vxgi.cpp  vxgi.h
projects/test/: afe.proj  imgui.ini  test_scene.json
tests/: CMakeLists.txt  gem_core_tests.cpp  gem_test.h
tools/: obj_2_c.py
